--- a/Webb/index.html
+++ b/Webb/index.html
@@ -1,12 +1,16 @@
+<!doctype html>
 <html>
     <head>
-        <title> WOW a cool website </title>
+        <title>The Quokka Family (Example website)</title>
     </head>
     <body>
-        <h1> WOW a cool website </h1>
-        <p>
-            CONTENT
-        </p>
-    </body>
-</html>
 
+        <a href="/webserver.c">View webserver source code here</a>
+
+        <h1>A Quokka Family Gathering (Example website)</h1>
+        <img src="img/quokka.jpg">
+        <p>The quokka, also known as the short-tailed scrub wallaby (Setonix brachyurus), is a small macropod about the size of a domestic cat. It is the only member of the genus Setonix. Like other marsupials in the macropod family (such as kangaroos and wallabies), the quokka is herbivorous and mainly nocturnal. Quokkas are found on some smaller islands off the coast of Western Australia, particularly Rottnest Island just off Perth and Bald Island near Albany. Isolated, scattered populations also exist in forest and coastal heath between Perth and Albany. A small colony inhabits a protected area of Two Peoples Bay Nature Reserve, where they co-exist with the critically endangered Gilbert's potoroo.</p>
+
+        <a href="/webserver.c">View webserver source code here</a>
+    </body>
+<html>
